--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run start --workspaces --if-present",
-    "test": "npm run test --workspace=contracts"
+    "test": "npm run test --workspace=swagger-editor"
   },
   "author": "Alexander Weigelt <webdesign@alexander-weigelt.de> (https://alexander-weigelt.de/)",
   "license": "ISC",
